X-editable-yii changelog
============================


Version 1.1.0  wip
----------------------------
[bug] If apply = true, attribute can be unsafe (vitalets)
[enh] Added composer support (vitalets)
[chg] EditableDetailView emptytext no more taken from nullDisplay option (vitalets)
[bug] Disable loading Yii's css for EditableDetailView in bootstrap mode (vitalets)
[enh] Added support of composite primary keys (vitalets)
[enh] Added Italian messages (vitalets)


Version 1.0.0  Dec 26, 2012
----------------------------
Initial release.